# socks5-impl

./: Cargo.toml
docs/: api-usage-examples.md  benchmark-results.md  breaking-change-v0.3.0.md  proxy-protocol-optimization.md
docs/plans/: 2026-01-28-http-impl-extraction.md  2026-01-28-stream-extraction-design.md  2026-01-28-stream-extraction.md  2026-01-28-trait-simplification-impl.md  2026-01-28-trait-simplification.md
examples/: echo-server.rs  s5-server.rs  udp-client.rs
http-impl/: Cargo.toml  README.md
http-impl/examples/: build_response.rs  parse_request.rs
http-impl/src/: async_ext.rs  auth.rs  error.rs  lib.rs  request.rs  response.rs
http-impl/tests/: async_test.rs  auth_test.rs  request_test.rs  response_test.rs
proxy-protocol/: Cargo.toml
proxy-protocol/benches/: parse_benchmark.rs
proxy-protocol/src/: lib.rs  result.rs  version2.rs
proxy-protocol/tests/: lib.rs
socks5-impl/: CHANGELOG.md  Cargo.toml
socks5-impl/src/: error.rs
socks5-impl/src/client/: mod.rs
socks5-impl/src/protocol/: address.rs  mod.rs  reply.rs  request.rs  response.rs  udp.rs
socks5-impl/src/protocol/handshake/: request.rs  response.rs
socks5-impl/src/server/: auth.rs  mod.rs
socks5-impl/src/server/connection/: associate.rs  bind.rs  connect.rs  mod.rs  stream.rs
src/: error.rs  lib.rs
src/protocol/: address.rs  mod.rs
src/protocol/handshake/: request.rs
src/server/: auth.rs
src/server/connection/: associate.rs  bind.rs  connect.rs  mod.rs  stream.rs
stream/: Cargo.toml  README.md
stream/src/: lib.rs
(+3 files in other folders)
